# ufc-dfs-analytics

./: .gitignore  BUGS_AND_FIXES.md  CLAUDE.md  __init__.py  config.py  data_loader.py  discover.py  pyproject.toml
data/analysis/: archetype_results.json  fighter_archetype_results.json  odds_composition_results.json  rules_summary.md
data/odds_api/: live_odds.json
docs/plans/: 2026-02-20-skill-v2-design.md  2026-02-20-skill-v2-implementation.md
migrations/: 001_canonical_identity.sql  002_card_position.sql  003_odds_quality_flags.sql  004_ownership_predictions.sql  005_sharp_signals.sql  006_backtest_results.sql
migrations/supabase/: 001_dimensions.sql  002_facts.sql  003_views.sql
reports/: backtest_report.json  backtest_report.md  fight_count_rules_2026-03-20.md  roi_validation_2026-03-07.md  roi_validation_enhanced_2026-03-14.md  roi_validation_enhanced_2026-03-20.md  skill_tables_2026-03-20.md
scripts/: construction_rules_analysis.py  construction_rules_detailed.py  contest_archetype_analysis.py  explore_db.py  export_skill_tables.py  export_to_supabase.py  fighter_rules_by_archetype.py  match_odds_to_fighters.py  odds_api_lineup_composition.py  prebuild_signals.py  pull_odds_api.py  resolve_incomplete_lineups.py  run_backtest.py  run_discovery.py  run_pipeline.py
src/: config.py  db.py
src/cv/: __init__.py  bootstrap.py  holdout.py  walk_forward.py
src/phase0_data/: card_position.py  (+3 more)
tests/: test_identity.py  test_leakage_guard.py  test_ownership_model.py  test_phase6.py  test_pipeline_stages.py  test_sharp_model.py  test_walk_forward.py
(+31 files in other folders)
