[project]
name = "ufc-dfs-analytics"
version = "0.1.0"
description = "UFC DFS analytics pipeline: ownership prediction, sharp signals, feature hygiene"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "scipy>=1.13",
    "joblib>=1.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.28.0",
    "psycopg2-binary>=2.9.11",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
explain = ["shap>=0.45"]
supabase = ["supabase>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
